@@ -25,7 +25,7 @@ is an example.</p>
 </p>
  <br>
 <a href="newindicator.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
-<a href="quotes.html" target="_self"><img src="next.png" border="0" width="32" height="32" alt="Next"></a>
+<a href="indicatorsummary.html" target="_self"><img src="next.png" border="0" width="32" height="32" alt="Next"></a>
 <a href="toc.html"><img src="home.png" border="0" width="32" height="32" alt="Home"></a>
 </body>
 </html>
