@@ -1,0 +1,28 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <title>Qtstalker: Indicator Summary</title>
+  <meta http-equiv="content-type"
+ content="text/html; charset=ISO-8859-1">
+</head>
+<body>
+<h2><u>Indicator Summary</u></h2>
+<p>
+The menu option "<code>Tools =&gt; Indicator Summary</code>" will show a table
+which lists all values of active indicators for each item in a Group.
+</p>
+<p>
+An xml version of the summary is also written to a file in the
+<code>~/.qtstalker/dataN/export/</code> directory. This can be used by other
+programs and by the <a href="indicator/exscript.html">ExScript</a> indicator.
+</p>
+<p>
+If there are many items and indicators, then it will take some time.
+</p>
+<p>
+<a href="datawindow.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
+<a href="quotes.html" target="_self"><img src="next.png" border="0" width="32" height="32" alt="Next"></a>
+<a href="toc.html"><img src="home.png" border="0" width="32" height="32" alt="Home"></a>
+</p>
+</body>
+</html>
