@@ -46,7 +46,7 @@ is started. Any information and errors will display here. <br>
 <br>
 <br>
 </p>
-<p><a href="datawindow.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
+<p><a href="indicatorsummary.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
 <a href="cme.html" target="_self"><img src="next.png" border="0" width="32" height="32" alt="Next"></a>
 <a href="toc.html"><img src="home.png" border="0" width="32" height="32" alt="Home"></a></p>
 		 </body>
