@@ -32,6 +32,7 @@
           <li><a href="toolbars.html">Toggle Draw mode</a></li>
           <li><a href="newindicator.html">New Indicator</a></li>
           <li><a href="datawindow.html">Data Window</a></li>
+          <li><a href="indicatorsummary.html">Indicator Summary</a></li>
           <li><a href="quotes.html">Quotes</a></li>
           <li><a href="toolbars.html">Help</a></li>
           <li><a href="toolbars.html">Compression</a></li>
