@@ -287,3 +287,5 @@
 20070607: Added misc/CUS_examples/Contributions/xley/FIs as a "Force Index" example. - thanks to xley for the patch.
 
 20070608: Save and restore last indicators used in each tab row on program re-starts. - thanks to xley for the patch.
+
+20070612: Added docs/indicatorsummary.html - thanks to xley for the patch.
